do only shared libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,7 +170,7 @@ if(MSVC AND (${CMAKE_GENERATOR} MATCHES "Visual Studio 10"))
 	source_group("Private headers\\FMI2" REGULAR_EXPRESSION "fmi2_.*impl.h") 
 endif()
 
-set(FMILIBKIND STATIC)
+set(FMILIBKIND SHARED)
 if(NOT FMILIB_STATIC_LIB_ONLY)
 	add_definitions(-DFMILIB_BUILDING_LIBRARY)
 endif()
@@ -297,7 +297,8 @@ if(FMILIB_BUILD_SHARED_LIB)
         target_compile_definitions(feelpp_fmilib PRIVATE -D_GNU_SOURCE)
     endif()
 
-	target_link_libraries(feelpp_fmilib ${FMILIB_SHARED_SUBLIBS})
+    message(STATUS  "fmi sublibs:  ${FMILIB_SHARED_SUBLIBS}")
+	target_link_libraries(feelpp_fmilib PUBLIC ${FMILIB_SHARED_SUBLIBS})
 	set(FMILIB_TARGETS ${FMILIB_TARGETS} feelpp_fmilib)
     foreach( target feelpp_fmilib feelpp_fmixml feelpp_fmizip feelpp_fmicapi feelpp_minizip feelpp_zlib feelpp_c99snprintf feelpp_jmutils feelpp_expat)
       if ( TARGET ${target} ) 
