--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,14 @@ ENDIF(NOT CMAKE_BUILD_TYPE)
 
 SET(CMAKE_INSTALL_PREFIX ${FMILIB_INSTALL_PREFIX} CACHE INTERNAL "Prefix prepended to install directories" FORCE)
 
+if (NOT DEFINED CMAKE_INSTALL_RPATH_USE_LINK_RPATH)
+  set(CMAKE_INSTALL_RPATH_USE_LINK_RPATH TRUE)
+endif()
+if (NOT DEFINED CMAKE_INSTALL_RPATH)
+  set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_LIBDIR})
+endif()
+set(CMAKE_MACOSX_RPATH 1)
+
 # debug_message is used to trace the build script
 function(debug_message)
 	if(FMILIB_PRINT_DEBUG_MESSAGES)
